--- a/pages/18840.html
+++ b/pages/18840.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -908,8 +908,8 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a>, the concept of <em>noncommutative probability space</em> or <em>quantum probability space</em> is the generalization of that of <em><a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a></em> as the concept of “space” is generalized to <a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>non-commutative geometry</a>.</p>
 
-<p>The basic idea is to encode a would-be <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> dually in its <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, typically regarded as a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, and encode the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> as a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on this star algebra</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒜</mi><mo>⟶</mo><mi>ℂ</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>The basic idea is to encode a would-be <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> <a class='existingWikiWord' href='/nlab/show/Isbell+duality'>dually</a> in its <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> <math class='maruku-mathml' display='inline' id='mathml_cfaa4028534a478becd28da558ed71f18b0e25fb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, typically regarded as a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, and encode the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> as a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on this star algebra</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cfaa4028534a478becd28da558ed71f18b0e25fb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒜</mi><mo>⟶</mo><mi>ℂ</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle
     (-) 
   \rangle
@@ -920,11 +920,11 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>Hence this primarily <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizes</a> the concept of <em><a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a></em> <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>A</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle A\rangle</annotation></semantics></math> (<a href='#Segal65'>Segal 65</a>, <a href='#Whittle92'>Whittle 92</a>) while leaving the nature of the underlying <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> implicit (in contrast to the classical formalization of <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a> by <a class='existingWikiWord' href='/nlab/show/Andrey+Kolmogorov'>Andrey Kolmogorov</a>).</p>
+<p>Hence this primarily <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizes</a> the concept of <em><a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a></em> <math class='maruku-mathml' display='inline' id='mathml_cfaa4028534a478becd28da558ed71f18b0e25fb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>A</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle A\rangle</annotation></semantics></math> (<a href='#Segal65'>Segal 65</a>, <a href='#Whittle92'>Whittle 92</a>) while leaving the nature of the underlying <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> implicit (in contrast to the classical formalization of <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a> by <a class='existingWikiWord' href='/nlab/show/Andrey+Kolmogorov'>Andrey Kolmogorov</a>).</p>
 
-<p>Often <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is assumed/required to be a <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a> (e.g. <a href='#Kuperberg05'>Kuperberg 05, section 1.8</a>). Often <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is taken to be the full algebra of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded operators</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> (e.g. <a href='#Attal'>Attal, def. 7.1</a>).</p>
+<p>Often <math class='maruku-mathml' display='inline' id='mathml_cfaa4028534a478becd28da558ed71f18b0e25fb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is assumed/required to be a <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a> (e.g. <a href='#Kuperberg05'>Kuperberg 05, section 1.8</a>). Often <math class='maruku-mathml' display='inline' id='mathml_cfaa4028534a478becd28da558ed71f18b0e25fb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is taken to be the full algebra of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded operators</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> (e.g. <a href='#Attal'>Attal, def. 7.1</a>).</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a>, <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> (or a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a> thereof) and <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle (-)\rangle</annotation></semantics></math> is a particular <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a>, for instance a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a>, <math class='maruku-mathml' display='inline' id='mathml_cfaa4028534a478becd28da558ed71f18b0e25fb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> (or a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a> thereof) and <math class='maruku-mathml' display='inline' id='mathml_cfaa4028534a478becd28da558ed71f18b0e25fb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle (-)\rangle</annotation></semantics></math> is a particular <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a>, for instance a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>.</p>
 
 <p>The formulation of <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative quantum field theory</a> from the algebraic perspective of quantum probability is known as <em><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></em> (<a class='existingWikiWord' href='/nlab/show/AQFT'>AQFT</a>).</p>
 
@@ -958,13 +958,15 @@ margin-left: 0em;
 <li id='Whittle92'>
 <p><a class='existingWikiWord' href='/nlab/show/Peter+Whittle'>Peter Whittle</a>, <em>Probability via expectation</em>, Springer 1992</p>
 </li>
-
-<li id='Gleason09'>
-<p>Jonathan Gleason, <em>The <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^*</annotation></semantics></math>-algebraic formalism of quantum mechanics</em>, 2009 (<a href='http://www.math.uchicago.edu/~may/VIGRE/VIGRE2009/REUPapers/Gleason.pdf'>pdf</a>)</p>
-</li>
 </ul>
 
-<p>Introduction to quantum probability theory includes</p>
+<p>A good exposition of quantum physics from this perspective is in</p>
+
+<ul>
+<li id='Gleason09'>Jonathan Gleason, <em>The <math class='maruku-mathml' display='inline' id='mathml_cfaa4028534a478becd28da558ed71f18b0e25fb_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^*</annotation></semantics></math>-algebraic formalism of quantum mechanics</em>, 2009 (<a href='http://www.math.uchicago.edu/~may/VIGRE/VIGRE2009/REUPapers/Gleason.pdf'>pdf</a>)</li>
+</ul>
+
+<p>Further introduction to quantum probability theory includes</p>
 
 <ul>
 <li id='Kuperberg05'>
@@ -984,6 +986,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>A textbook account is</p>
+
+<ul>
+<li id='Landsman17'><a class='existingWikiWord' href='/nlab/show/Nicolaas+Landsman'>Klaas Landsman</a>, <em>Foundations of quantum theory – From classical concepts to Operator algebras</em>, Springer Open 2017 (<a href='https://link.springer.com/content/pdf/10.1007%2F978-3-319-51777-3.pdf'>pdf</a>)</li>
+</ul>
+
 <p>
 </p>
 
@@ -1001,7 +1009,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  6, 2018 10:54:57 
+  Revised on February  6, 2018 11:06:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
