--- a/pages/11768.html
+++ b/pages/11768.html
@@ -308,7 +308,9 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
+    <p><a href='https://sites.google.com/site/orenbenbassat/'>home page</a></p>
+
+<ul>
 <li><a href='http://www.maths.ox.ac.uk/contact/details/benbassat'>webpage</a></li>
 </ul>
 
@@ -316,14 +318,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on May 30, 2014 04:02:17 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (31.55.15.191)
+  Revised on February  7, 2018 11:00:23 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (94.119.64.2)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Oren+Ben-Bassat" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Oren+Ben-Bassat" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Oren+Ben-Bassat/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Oren+Ben-Bassat" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Oren+Ben-Bassat" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
