--- a/pages/4689.html
+++ b/pages/4689.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1085,7 +1085,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#effects'>Effects</a><ul><li><a href='#CorrectionToAnomalousMagneticMomentOfTheLeptons'>Correction to anomalous magnetic moment of the leptons</a></li></ul></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#ReferencesAsAnEffectiveFieldTheory'>As an effective perturbative field theory</a></li><li><a href='#ReferencesNonRenormalizability'>Non-renormalizablity</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#effects'>Effects</a><ul><li><a href='#CorrectionToAnomalousMagneticMomentOfTheLeptons'>Correction to anomalous magnetic moment of the leptons</a></li></ul></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#ReferencesAsAnEffectiveFieldTheory'>As a perturbative quantum field theory</a></li><li><a href='#ReferencesNonRenormalizability'>Non-renormalizablity</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A theory of <em>quantum gravity</em> (QG) is supposed to be a <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> (QFT) – or something similar – that corresponds to the <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, possibly by <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a>.</p>
@@ -1148,7 +1148,7 @@ margin-left: 0em;
 
 <p>Still another suggestion has been that ordinary quantum field theory might be seen to apply to the ordinary configuration space and action functional of general relativity, if only a suitably adapted parameterization of the configuration space is chosen. Notably one observes that <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a>s may be encoded in terms of <a class='existingWikiWord' href='/nlab/show/connection+on+a+bundle'>connections on the tangent bundle</a> – the <a class='existingWikiWord' href='/nlab/show/Levi-Civita+connection'>Levi-Civita connection</a> – this being manifestly analogous to the nature of the fields in <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>. (See <a class='existingWikiWord' href='/nlab/show/first-order+formulation+of+gravity'>first-order formulation of gravity</a>).</p>
 
-<p>It has been suggested that therefore quantum gravity may have a description in terms of the <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>-observables of these connections, their <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> around loops. Research in this direction has therefore become known as <em>loop quantum gravity</em> . However, little progress has been made in understanding the configuration space of smooth connections in terms of loop observables. In most of the LQG-literature instead it is assumed from the outset that it makes sense to pass to <em>generalized connections</em> : while a smooth connection is the same as a smooth <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a>-<a class='existingWikiWord' href='/nlab/show/functor'>functor</a> on the <a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_579e3fc511130906ae0adbf5aa0220f318fe8188_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>P</mi></mstyle> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding='application/x-tex'>\mathbf{P}_1(X) \to \mathbf{B}G</annotation></semantics></math>, the “generalized connections” in this context are taken to be non-smooth and non-continuous such functors on sub-categories of paths. It is is not clear how this configuration space relates to that of ordinary gravity.</p>
+<p>It has been suggested that therefore quantum gravity may have a description in terms of the <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>-observables of these connections, their <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> around loops. Research in this direction has therefore become known as <em>loop quantum gravity</em> . However, little progress has been made in understanding the configuration space of smooth connections in terms of loop observables. In most of the LQG-literature instead it is assumed from the outset that it makes sense to pass to <em>generalized connections</em> : while a smooth connection is the same as a smooth <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a>-<a class='existingWikiWord' href='/nlab/show/functor'>functor</a> on the <a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_fe536d0162ac6522a0cfefaf5b05ecb9edbde733_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>P</mi></mstyle> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding='application/x-tex'>\mathbf{P}_1(X) \to \mathbf{B}G</annotation></semantics></math>, the “generalized connections” in this context are taken to be non-smooth and non-continuous such functors on sub-categories of paths. It is is not clear how this configuration space relates to that of ordinary gravity.</p>
 
 <p>A plethora of further suggestions has developed out of this, which in the literature often still go under the name “LQG”, even though they may abandon the description of configuration spaces of metrics in terms of loop observables. There is for instance the approach of <em>spin foams</em> or <em><span class='newWikiWord'>causal dynamical triangulations<a href='/nlab/new/causal+dynamical+triangulations'>?</a></span></em>, and that of <em><a class='existingWikiWord' href='/nlab/show/causet'>causets</a></em> , to name just a few.</p>
 
@@ -1232,11 +1232,15 @@ margin-left: 0em;
 <li id='Witten11'><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Quantum Gravity</em>, Solomon Lefschetz Memorial Lecture Series, November 2011 (<a href='https://www.youtube.com/watch?v=uRdCJMYc2Ds#t=15'>video</a>)</li>
 </ul>
 
-<h3 id='ReferencesAsAnEffectiveFieldTheory'>As an effective perturbative field theory</h3>
+<h3 id='ReferencesAsAnEffectiveFieldTheory'>As a perturbative quantum field theory</h3>
 
-<p>One may regard <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> as an <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective field theory</a> and just quantize in <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbation theory</a>. An introduction to this perspective is in</p>
+<p>As a <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, quantum gravity exists (usually thought of as an <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective quantum field theory</a>):</p>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Martinus+Veltman'>Martinus Veltman</a>, <em>Quantum theory of Gravitation</em>, In Les Houches 1975, Proceedings, Methods In Field Theory, (Amsterdam 1976) 265-327.</p>
+</li>
+
 <li id='DonoghueIntroduction'>
 <p>John F. Donoghue, <em>Introduction to the Effective Field Theory Description of Gravity</em> (<a href='http://arxiv.org/abs/gr-qc/9512024'>arXiv:gr-qc/9512024</a>)</p>
 </li>
@@ -1279,7 +1283,7 @@ margin-left: 0em;
 <p>and adapted to <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> in</p>
 
 <ul>
-<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_579e3fc511130906ae0adbf5aa0220f318fe8188_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_fe536d0162ac6522a0cfefaf5b05ecb9edbde733_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
 </ul>
 
 <p>For more discussion of perturbative <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> see at</p>
@@ -1368,14 +1372,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  7, 2018 02:34:00 
+  Revised on February  7, 2018 13:58:21 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+gravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+gravity/34" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(34 revisions)</span> | <a href="/nlab/show/diff/quantum+gravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+gravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+gravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+gravity/35" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(35 revisions)</span> | <a href="/nlab/show/diff/quantum+gravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+gravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
