--- a/pages/1902.html
+++ b/pages/1902.html
@@ -316,7 +316,25 @@ margin-left: 0em;
 <h2 id='some_publications'>Some publications</h2>
 
 <ul>
-<li><em>Enriched categories, internal categories and change of base</em> Ph.D. thesis, Cambridge University (1992), reprinted as Reprints in Theory and Applications of Categories, No. 20 (2011) pp 1-266 (<a href='http://www.tac.mta.ca/tac/reprints/articles/20/tr20abs.html'>TAC</a>)</li>
+<li>
+<p><em>Enriched categories, internal categories and change of base</em> Ph.D. thesis, Cambridge University (1992), reprinted as Reprints in Theory and Applications of Categories, No. 20 (2011) pp 1-266 (<a href='http://www.tac.mta.ca/tac/reprints/articles/20/tr20abs.html'>TAC</a>)</p>
+</li>
+
+<li>
+<p>D. R. Verity, 2005, Complicial Sets , available from : <a href='http://arxiv.org/abs/math.CT/0410412'>arXiv:math.CT/0410412</a>.</p>
+</li>
+
+<li>
+<p>D. Verity, 2006, Weak complicial sets I: basic homotopy theory , available from : <a href='http://arxiv.org/abs/math/0604414'>arXiv:math/0604414</a>.</p>
+</li>
+
+<li>
+<p>D. R. Verity, 2006, Weak complicial sets. III. Enriched and internal quasi-category theory , (in preparation).</p>
+</li>
+
+<li>
+<p>D. R. Verity, 2007, Weak complicial sets. II. Nerves of complicial Gray-categories , in Categories in algebra, geometry and mathematical physics , volume 431 of Contemp. Math., 441–467, Amer. Math. Soc., Providence, RI.</p>
+</li>
 </ul>
 
 <h2 id='related_entries'>Related entries</h2>
@@ -346,14 +364,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  9, 2012 12:34:44 
+  Revised on February  8, 2018 01:35:28 
   by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (95.147.237.166)
+  (2.27.86.48)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dominic+Verity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dominic+Verity/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Dominic+Verity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dominic+Verity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dominic+Verity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dominic+Verity/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Dominic+Verity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dominic+Verity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
